--- a/my own web/index.html
+++ b/my own web/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,21 +6,16 @@
   <title>NAUT GAMES</title>
   <link rel="stylesheet" href="style.css">
   <meta name="theme-color" content="#2e86de">
-    <link rel="website icon" type="png"
+  <link rel="website icon" type="png"
         href="https://pics.freeicons.io/uploads/icons/png/41018396316342845934476-512.png">
 </head>
-
-<header>
-  <nav>
-    <img src="https://pics.freeicons.io/uploads/icons/png/41018396316342845934476-512.png" alt="NAUT GAMES " class="logo">
-    <span class="site-name">NAUT GAMES</span>
-  </nav>
-</header>
-
-
-
-
 <body>
+  <header>
+    <nav>
+      <img src="https://pics.freeicons.io/uploads/icons/png/41018396316342845934476-512.png" alt="NAUT GAMES " class="logo">
+      <span class="site-name">NAUT GAMES</span>
+    </nav>
+  </header>
   <main>
     <h1>Welcome to RXN Game</h1>
   </main>
@@ -38,6 +32,11 @@
         <div class="strength-text" id="strength-text"></div>
       </div>
       <button>Start your journey with RXN Game  🎮 </button>
+    </form>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
     </form>
   </div>
   <script src="script.js"></script>
